clusters/central-tx-hou-101-fleet2/bootstrap/heartbeat/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: heartbeat-vs
  namespace: heartbeat
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/istio-gateway
  http:
    - match:
        - uri:
            prefix: "/heartbeat"
      route:
        - destination:
            host: heartbeat
            port:
              number: 8080
